; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_bme680.c_calc_dur.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_bme680.c_calc_dur.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@os_temp = common dso_local global i64 0, align 8
@os_pres = common dso_local global i64 0, align 8
@os_hum = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [13 x i8] c"tpc_dur: %d\0A\00", align 1
@heatr_dur = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @calc_dur() #0 {
  %1 = alloca i32, align 4
  %2 = load i64, i64* @os_temp, align 8
  %3 = load i64, i64* @os_pres, align 8
  %4 = add nsw i64 %2, %3
  %5 = load i64, i64* @os_hum, align 8
  %6 = add nsw i64 %4, %5
  %7 = trunc i64 %6 to i32
  %8 = call i32 @UINT32_C(i32 1963)
  %9 = mul nsw i32 %7, %8
  store i32 %9, i32* %1, align 4
  %10 = call i32 @UINT32_C(i32 1908)
  %11 = load i32, i32* %1, align 4
  %12 = add nsw i32 %11, %10
  store i32 %12, i32* %1, align 4
  %13 = call i32 @UINT32_C(i32 2385)
  %14 = load i32, i32* %1, align 4
  %15 = add nsw i32 %14, %13
  store i32 %15, i32* %1, align 4
  %16 = call i32 @UINT32_C(i32 500)
  %17 = load i32, i32* %1, align 4
  %18 = add nsw i32 %17, %16
  store i32 %18, i32* %1, align 4
  %19 = call i32 @UINT32_C(i32 1000)
  %20 = load i32, i32* %1, align 4
  %21 = sdiv i32 %20, %19
  store i32 %21, i32* %1, align 4
  %22 = call i32 @UINT32_C(i32 1)
  %23 = load i32, i32* %1, align 4
  %24 = add nsw i32 %23, %22
  store i32 %24, i32* %1, align 4
  %25 = load i32, i32* %1, align 4
  %26 = call i32 @NODE_DBG(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i32 %25)
  %27 = load i64, i64* @heatr_dur, align 8
  %28 = load i32, i32* %1, align 4
  %29 = sext i32 %28 to i64
  %30 = add nsw i64 %27, %29
  ret i64 %30
}

declare dso_local i32 @UINT32_C(i32) #1

declare dso_local i32 @NODE_DBG(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
